--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>newweb</title>
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/newweb.css">
+    <title>Design</title>
+    <link rel="stylesheet" href="src/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="src/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="src/css/newweb.css">
 </head>
 <body>
 <header class="header">
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header_menu">
                 <div class="header_logo">
-                    <img src="icons/brand%20(1).svg" alt="">
+                    <img src="src/icons/brand%20(1).svg" alt="">
                 </div>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -45,13 +45,13 @@
                     <div class="promo_link">
                         <div class="promo_item">
                             <div class="promo_self">
-                                <img src="icons/microphone-solid.svg" alt="">
+                                <img src="src/icons/microphone-solid.svg" alt="">
                                 <p>99898 123 45 00</p>
                             </div>
 
                             <div>
                                 <div class="promo_self">
-                                    <img src="icons/envelope-solid.svg" alt="">
+                                    <img src="src/icons/envelope-solid.svg" alt="">
                                     <p>rdyugjjkj;kohgf@mail.com</p>
                                 </div>
                             </div>
@@ -60,12 +60,12 @@
                         <div class="promo_item">
                             <p>Social media</p>
                             <div class="promo_img">
-                                <img src="icons/facebook-f-brands.svg" alt="">
-                                <img src="icons/twitter-brands.svg" alt="">
-                                <img src="icons/google-plus-g-brands.svg" alt="">
-                                <img src="icons/pinterest-p-brands.svg" alt="">
-                                <img src="icons/instagram-brands.svg" alt="">
-                                <img src="icons/wifi-solid.svg" alt="">
+                                <img src="src/icons/facebook-f-brands.svg" alt="">
+                                <img src="src/icons/twitter-brands.svg" alt="">
+                                <img src="src/icons/google-plus-g-brands.svg" alt="">
+                                <img src="src/icons/pinterest-p-brands.svg" alt="">
+                                <img src="src/icons/instagram-brands.svg" alt="">
+                                <img src="src/icons/wifi-solid.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -87,28 +87,28 @@
             </div>
             <div class="about_list">
                 <div class="about_list_item">
-                    <img src="icons/images.png" alt="">
+                    <img src="src/icons/images.png" alt="">
                     <div class="about_list_text">
                         <h4>15+</h4>
                         <p>Lorem ipsum dolor</p>
                     </div>
                 </div>
                 <div class="about_list_item">
-                    <img src="icons/star.png" alt="">
+                    <img src="src/icons/star.png" alt="">
                     <div class="about_list_text">
                         <h4>3434+</h4>
                         <p>Lorem ipsum dolor</p>
                     </div>
                 </div>
                 <div class="about_list_item">
-                    <img src="icons/smile.png" alt="">
+                    <img src="src/icons/smile.png" alt="">
                     <div class="about_list_text">
                         <h4>125+</h4>
                         <p>Lorem ipsum dolor</p>
                     </div>
                 </div>
                 <div class="about_list_item">
-                    <img src="icons/user-solid.svg" alt="">
+                    <img src="src/icons/user-solid.svg" alt="">
                     <div class="about_list_text">
                         <h4>80+</h4>
                         <p>Lorem ipsum dolor</p>
@@ -127,7 +127,7 @@
             <div class="expertises_list">
                 <a href="">
                     <div class="expertises_item">
-                        <img src="img/img-5.jpg" alt="">
+                        <img src="src/img/img-5.jpg" alt="">
                         <h3>Coding & Designing</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -136,7 +136,7 @@
             <div class="expertises_list">
                 <a href="">
                     <div class="expertises_item">
-                        <img src="img/img-6.jpg" alt="">
+                        <img src="src/img/img-6.jpg" alt="">
                         <h3>Graphic Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -145,7 +145,7 @@
             <div class="expertises_list">
                 <a href="">
                     <div class="expertises_item">
-                        <img src="img/img-7.jpg" alt="">
+                        <img src="src/img/img-7.jpg" alt="">
                         <h3>Development</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -162,7 +162,7 @@
             <div class="products_list">
                 <a href="">
                     <div class="products_item">
-                        <img src="img/img-8.jpg" alt="">
+                        <img src="src/img/img-8.jpg" alt="">
                         <h3>Fuga asperiores</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -171,7 +171,7 @@
             <div class="products_list">
                 <a href="">
                     <div class="products_item">
-                        <img src="img/img-9.jpg" alt="">
+                        <img src="src/img/img-9.jpg" alt="">
                         <h3>Voluptatibus iure</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -180,7 +180,7 @@
             <div class="products_list">
                 <a href="">
                     <div class="products_item">
-                        <img src="img/img-10.jpg" alt="">
+                        <img src="src/img/img-10.jpg" alt="">
                         <h3>Autem minus</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -189,7 +189,7 @@
             <div class="products_list">
                 <a href="">
                     <div class="products_item">
-                        <img src="img/img-4.jpg" alt="">
+                        <img src="src/img/img-4.jpg" alt="">
                         <h3>Sed eligendi</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem!</p>
                     </div>
@@ -203,7 +203,7 @@
         <p class="testmonials_text">Lorem ipsum dolor</p>
         <h2>Testmonials</h2>
         <div class="testmonial_item">
-            <div class="image"><img src="img/avatar1.jpg" alt=""></div>
+            <div class="image"><img src="src/img/avatar1.jpg" alt=""></div>
             <div class="test_text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque cupiditate
                     dolore doloremque ex, fugit inventore labore magnam maxime minima molestiae nihil
@@ -227,12 +227,12 @@
 
             <div class="promo_items1">
                 <div class="promo_self1">
-                    <img src="icons/microphone-solid.svg" alt="">
+                    <img src="src/icons/microphone-solid.svg" alt="">
                     <p>99898 123 45 00</p>
                 </div>
                 <div>
                     <div class="promo_self1">
-                        <img src="icons/envelope-solid.svg" alt="">
+                        <img src="src/icons/envelope-solid.svg" alt="">
                         <p>rdyugjjkj;kohgf@mail.com</p>
                     </div>
                 </div>
@@ -241,12 +241,12 @@
                 <div class="link_p">
                     <p>Social media</p>
                     <div class="promo_img1">
-                        <img src="icons/facebook-f-brands.svg" alt="">
-                        <img src="icons/twitter-brands.svg" alt="">
-                        <img src="icons/google-plus-g-brands.svg" alt="">
-                        <img src="icons/pinterest-p-brands.svg" alt="">
-                        <img src="icons/instagram-brands.svg" alt="">
-                        <img src="icons/wifi-solid.svg" alt="">
+                        <img src="src/icons/facebook-f-brands.svg" alt="">
+                        <img src="src/icons/twitter-brands.svg" alt="">
+                        <img src="src/icons/google-plus-g-brands.svg" alt="">
+                        <img src="src/icons/pinterest-p-brands.svg" alt="">
+                        <img src="src/icons/instagram-brands.svg" alt="">
+                        <img src="src/icons/wifi-solid.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -262,7 +262,7 @@
         <br>
         <br>
         <div class="blog_item">
-            <div class="image"><img src="img/img-10.jpg" alt=""></div>
+            <div class="image"><img src="src/img/img-10.jpg" alt=""></div>
             <div class="blog_text">
                 <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam blanditiis, commodi, cum dignissimos dolor ea esse et eum excepturi expedita facilis harum in ipsum perferendis quia quidem reiciendis sequi temporibus tenetur voluptas. At atque, dolorem, excepturi, magnam magni nam omnis perspiciatis quae quibusdam sunt ullam unde. Hic odio odit quisquam.</p>
@@ -271,11 +271,11 @@
                 <h3><span>Graphic design</span></h3>
                 <br>
                 <div class="blog_img">
-                   <img src="icons/user-solid%20(1).svg" alt="">
+                   <img src="src/icons/user-solid%20(1).svg" alt="">
                 <p>admin</p>
-                <img src="icons/thumbs-up-solid.svg" alt="">
+                <img src="src/icons/thumbs-up-solid.svg" alt="">
                 <p>213</p>
-                <img src="icons/searchicon.png" alt="">
+                <img src="src/icons/searchicon.png" alt="">
                 <p>123</p>
                </div>
             </div>
@@ -293,11 +293,11 @@
         <div class="contactinfo">
             <h5> CONTACT INFO</h5>
             <p>Contact us and we'll get back to you within 24 hours.</p>
-           <div class="contacts"> <div class="box"><img src="icons/location-dot-solid.svg" alt="">
+           <div class="contacts"> <div class="box"><img src="src/icons/location-dot-solid.svg" alt="">
                <p>12345 Fake ST NoWhere AB Country</p></div>
-           <div class="box"> <img src="icons/envelope-solid%20—%20копия.svg" alt="">
+           <div class="box"> <img src="src/icons/envelope-solid%20—%20копия.svg" alt="">
                <p>info@domain.com</p></div>
-           <div class="box"><img src="icons/microphone-solid%20—%20копия.svg" alt="">
+           <div class="box"><img src="src/icons/microphone-solid%20—%20копия.svg" alt="">
                <p> (123) 456-7890</p></div>
            </div>
         </div>
@@ -307,12 +307,12 @@
             <p>Copyright 2045 © DevCRUD</p>
         </div>
         <div class="sites">
-            <img src="icons/facebook-f-brands%20—%20копия.svg" alt="">
-                        <img src="icons/twitter-brands%20—%20копия.svg" alt="">
-                        <img src="icons/google-plus-g-brands%20—%20копия.svg" alt="">
-                        <img src="icons/pinterest-p-brands%20—%20копия.svg" alt="">
-                        <img src="icons/instagram-brands%20—%20копия.svg" alt="">
-                        <img src="icons/wifi-solid%20—%20копия.svg" alt="">
+            <img src="src/icons/facebook-f-brands%20—%20копия.svg" alt="">
+                        <img src="src/icons/twitter-brands%20—%20копия.svg" alt="">
+                        <img src="src/icons/google-plus-g-brands%20—%20копия.svg" alt="">
+                        <img src="src/icons/pinterest-p-brands%20—%20копия.svg" alt="">
+                        <img src="src/icons/instagram-brands%20—%20копия.svg" alt="">
+                        <img src="src/icons/wifi-solid%20—%20копия.svg" alt="">
         </div>
         </div>
     </div>
